fix : events section scrollbar and homepage css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,16 @@
     padding-right: 20px;
     min-width: 45%;
 }
+
+::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(99 126 171);
+    outline: 1px solid slategrey;
+  }
